--- a/wp-content/themes/astra-child-theme/style.css
+++ b/wp-content/themes/astra-child-theme/style.css
@@ -14,5 +14,11 @@
 
 
 body{
-    background-color: beige;
+    background-color: red;
+}
+
+.main-header-bar{
+    position: fixed;
+    width: 100%;
+
 }
